Adding path informations
