# publisher/controllers.go
@@ -18,6 +18,10 @@ var (
 	errBodyValidate      = errors.New("unable to parse body")
 )
 
+type sent struct {
+	Message string `json:"message"`
+}
+
 type receiver struct {
 	Name  string `json:"name"  validate:"required"`
 	Email string `json:"email" validate:"required,email"`
@@ -28,7 +32,7 @@ type template struct {
 	Data map[string]string `json:"data"`
 }
 
-type email struct {
+type emailBody struct {
 	Receivers      []receiver `json:"receivers"      validate:"required_without=BlindReceivers"`
 	BlindReceivers []receiver `json:"blindReceivers" validate:"required_without=Receivers"`
 	Subject        string     `json:"subject"        validate:"required"`
@@ -45,10 +49,10 @@ type queue struct {
 	languages  []string
 }
 
-func (queue *queue) bodyParser(body any, handler *fiber.Ctx) (int, error) {
+func (queue *queue) bodyParser(body any, handler *fiber.Ctx) error {
 	err := handler.BodyParser(body)
 	if err != nil {
-		return fiber.StatusBadRequest, errBodyValidate
+		return errBodyValidate
 	}
 
 	err = queue.validate.Struct(body)
@@ -57,7 +61,7 @@ func (queue *queue) bodyParser(body any, handler *fiber.Ctx) (int, error) {
 
 		okay := errors.As(err, &validationErrs)
 		if !okay {
-			return fiber.StatusBadRequest, errBodyValidate
+			return errBodyValidate
 		}
 
 		accept := handler.AcceptsLanguages(queue.languages...)
@@ -74,28 +78,43 @@ func (queue *queue) bodyParser(body any, handler *fiber.Ctx) (int, error) {
 			messageSend += "\n" + message
 		}
 
-		return fiber.StatusBadRequest, errors.New(messageSend) //nolint: goerr113
+		return errors.New(messageSend) //nolint: goerr113
 	}
 
-	return 0, nil
+	return nil
 }
 
+type queueBody struct {
+	Name       string `json:"name"       validate:"required"`
+	MaxRetries int64  `json:"maxRetries"`
+}
+
+// Creating a RabbitMQ queue
+//
+// @Summary		Creating queue
+// @Tags			queue
+// @Accept			json
+// @Produce		json
+// @Success		200		{object}	sent "create queue successfully"
+// @Failure		400		{object}	sent "an invalid queue param was sent"
+// @Failure		409		{object}	sent "queue already exist"
+// @Failure		500		{object}	sent "internal server error"
+// @Param			queue	body		queueBody	true	"queue params"
+// @Router			/email/queue [post]
+// @Description	Creating a RabbitMQ queue.
 func (queue *queue) create() func(*fiber.Ctx) error {
 	return func(handler *fiber.Ctx) error {
-		body := &struct {
-			Name       string `json:"name" validate:"required"`
-			MaxRetries int64  `json:"maxRetries"`
-		}{
+		body := &queueBody{
 			MaxRetries: 10, //nolint:gomnd
 		}
 
-		status, err := queue.bodyParser(body, handler)
+		err := queue.bodyParser(body, handler)
 		if err != nil {
-			return handler.Status(status).SendString(err.Error())
+			return handler.Status(fiber.StatusBadRequest).JSON(sent{err.Error()})
 		}
 
 		if queue.queues.Exist(body.Name) {
-			return handler.Status(fiber.StatusConflict).SendString(errQueueAlreadyExist.Error())
+			return handler.Status(fiber.StatusConflict).JSON(sent{errQueueAlreadyExist.Error()})
 		}
 
 		err = queue.rabbit.CreateQueue(body.Name, body.MaxRetries)
@@ -103,28 +122,42 @@ func (queue *queue) create() func(*fiber.Ctx) error {
 			log.Printf("[ERROR] - Error creating queue: %s", err)
 
 			return handler.Status(fiber.StatusInternalServerError).
-				SendString("error creating queue")
+				JSON(sent{"error creating queue"})
 		}
 
 		queue.queues.Add(body.Name)
 
-		return nil
+		return handler.Status(fiber.StatusCreated).JSON(sent{"Queue created"})
 	}
 }
 
+// Sends an email to the RabbitMQ queue
+//
+// @Summary		Sends email
+// @Tags			queue
+// @Accept			json
+// @Produce		json
+// @Success		200		{object}	sent "email sent successfully"
+// @Failure		400		{object}	sent "an invalid email param was sent"
+// @Failure		404		{object}	sent "queue does not exist"
+// @Failure		500		{object}	sent "internal server error"
+// @Param			name	path	string		true	"queue name"
+// @Param			queue	body	emailBody	true	"email"
+// @Router			/email/queue/{name}/send [post]
+// @Description	Sends an email to the RabbitMQ queue.
 func (queue *queue) send() func(*fiber.Ctx) error {
 	return func(handler *fiber.Ctx) error {
 		name := handler.Params("name")
 
 		if !queue.queues.Exist(name) {
-			return handler.Status(fiber.StatusNotFound).SendString(errQueueDontExist.Error())
+			return handler.Status(fiber.StatusNotFound).JSON(sent{errQueueDontExist.Error()})
 		}
 
-		body := &email{}
+		body := &emailBody{}
 
-		status, err := queue.bodyParser(body, handler)
+		err := queue.bodyParser(body, handler)
 		if err != nil {
-			return handler.Status(status).SendString(err.Error())
+			return handler.Status(fiber.StatusBadRequest).JSON(sent{err.Error()})
 		}
 
 		err = queue.rabbit.SendMessage(context.Background(), name, body)
@@ -132,9 +165,9 @@ func (queue *queue) send() func(*fiber.Ctx) error {
 			log.Printf("[ERROR] - Error creating queue: %s", err)
 
 			return handler.Status(fiber.StatusInternalServerError).
-				SendString("error creating queue")
+				JSON(sent{"error creating queue"})
 		}
 
-		return nil
+		return handler.JSON(sent{"Email sent"})
 	}
 }
